invalid_var_sym_sym_arg_keywords_test/invalid_var_sym_sym_arg_keywords_test_39.src
.IPPcode24
GT LF@a int@49